# Aspherix-CoSim-Socket-Lib

./: .gitignore  CMakeLists.txt  aspherix_cosim_socket.cpp  aspherix_cosim_socket.h  aspherix_cosim_socketConfig.cmake  compileLib.sh  license.txt
socketLib/: CMakeLists.txt  aspherix_cosim_socket.cpp  aspherix_cosim_socket.h  aspherix_cosim_socketConfig.cmake  compileMe.sh  socket.cpp  socket.h
